# lox-cpp

./: .bazelrc  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE
data/: test.lox
src/: BUILD  CMakeLists.txt  chunk.cpp  chunk.h  common.cpp  common.h  compiler.cpp  compiler.h  error.cpp  error.h  expected.hpp  heap.cpp  heap.h  main.cpp  native_function.cpp  native_function.h  object.h  parser_state.cpp  parser_state.h  scanner.cpp  scanner.h  source.cpp  source.h  value.cpp  value.h  value_formatter.h  virtual_machine.cpp  virtual_machine.h
tests/: BUILD  CMakeLists.txt  main.cpp  test_compiler.cpp  test_virtual_machine.cpp
